修改 swagger 注释，添加角色路由
